Engine controll over websockets
