# server/Api.WebSocket/ClientDto/EngineStateDto.cs
@@ -1,0 +1,8 @@
+﻿using WebSocketBoilerplate;
+
+namespace Api.Websocket.ClientDto;
+
+public class EngineStateDto:BaseDto
+{
+    public bool EngineState { get; set; }
+}
