# server/Application/Interfaces/Robot/IRobotEngineService.cs
@@ -1,0 +1,6 @@
+﻿namespace Application.Interfaces.Robot;
+
+public interface IRobotEngineService
+{
+   Task ManageEngine(bool engineState);
+}
